--- a/X3DOM/Lecture/4d-IndexedFaceSet.html
+++ b/X3DOM/Lecture/4d-IndexedFaceSet.html
@@ -10,7 +10,7 @@
 
 <Scene>
   <Shape>
-    <Appearance> <Material/> </Appearance>
+    <Appearance> <Material> </Material> </Appearance>
     <IndexedFaceSet coordIndex='3 2 1 0 -1'>
       <Coordinate point='-1 -1  0
                           1 -1  0
