--- a/X3DOM/Lecture/5a-Cube.html
+++ b/X3DOM/Lecture/5a-Cube.html
@@ -10,7 +10,7 @@
 
 <Scene>
   <Shape>
-    <Appearance> <Material/> </Appearance>
+    <Appearance> <Material> </Material> </Appearance>
     <IndexedFaceSet solid='false'
                coordIndex='0 1 2 3 -1'>
       <Coordinate point='-1 -1 -1
