--- a/X3DOM/Lecture/6a-Cubes.html
+++ b/X3DOM/Lecture/6a-Cubes.html
@@ -10,7 +10,7 @@
 
 <Scene>
   <Shape DEF='cube'>
-    <Appearance> <Material/> </Appearance>
+    <Appearance> <Material> </Material> </Appearance>
     <IndexedFaceSet solid='true'
                coordIndex='3 2 1 0 -1
                            4 5 6 7 -1
