--- a/X3DOM/Lecture/7b-ThreeCubes.html
+++ b/X3DOM/Lecture/7b-ThreeCubes.html
@@ -12,7 +12,7 @@
   <Group DEF='threecubes'>
     <Transform translation='0 -3 0'>
       <Shape DEF='cube'>
-        <Appearance> <Material/> </Appearance>
+        <Appearance> <Material> </Material> </Appearance>
         <IndexedFaceSet solid='true'
                    coordIndex='3 2 1 0 -1
                                4 5 6 7 -1
