--- a/X3DOM/Workshop/Solution1.html
+++ b/X3DOM/Workshop/Solution1.html
@@ -6,22 +6,21 @@
     <link rel='stylesheet' type='text/css' href='http://www.x3dom.org/download/x3dom.css'></link>
   </head>
   <body>
-    <x3d width="500px" height="500px">
+    <x3d>
 
 <Scene>
   <Shape>
     <Appearance> <Material> </Material> </Appearance>
-    <IndexedFaceSet solid='true'
-               coordIndex='3 2 1 0 -1
-                           4 5 6 7 -1'>
+    <IndexedFaceSet coordIndex='3 2 1 0 -1
+                                0 1 4 -1
+                                1 2 4 -1
+                                2 3 4 -1
+                                3 0 4 -1'>
       <Coordinate point='-1 -1 -1
                           1 -1 -1
                           1  1 -1
                          -1  1 -1
-                         -1 -1  1
-                          1 -1  1
-                          1  1  1
-                         -1  1  1'/>
+                          0  0  1'/>
     </IndexedFaceSet>
   </Shape>
 </Scene>
