Fix missing /Transform

--- a/X3DOM/Workshop/Solution3.html
+++ b/X3DOM/Workshop/Solution3.html
@@ -39,6 +39,7 @@
       <Transform rotation='1 0 0 4.7123'>
         <Group USE='pyramid'></Group>
       </Transform>
+    </Transform>
   </Group>
 
   <Transform rotation='1 0 0 2.09439'>
